IF(UNIX)
	ADD_CUSTOM_TARGET(man ALL)

	ADD_CUSTOM_COMMAND(
		TARGET man
		COMMAND groff -man -Tascii ${CMAKE_CURRENT_SOURCE_DIR}/rtcwake-schedule.txt > ${CMAKE_CURRENT_BINARY_DIR}/rtcwake-schedule.1
		OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/rtcwake-schedule.1
	)

	ADD_CUSTOM_COMMAND(
		TARGET man
		DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/rtcwake-schedule.1
	)

	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/rtcwake-schedule.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
ENDIF(UNIX)
